--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@szhsin/react-accordion": "^1.2.6",
     "@tailwindcss/forms": "^0.5.9",
+    "axios": "^1.7.7",
     "formik": "^2.4.6",
     "next": "14.2.13",
     "react": "^18",
