--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "next": "14.2.13",
+    "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
