--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 AUTH_SECRET=kjgh5467&$569dkdhbv
+CLOUDINARY_CLOUD_NAME=dnahjt0do
+CLOUDINARY_API_KEY=778997497951123
+CLOUDINARY_API_SECRET=wDQy-uLQDAd0nAXIoIoj74vvkpw
+URL_DOMAIN=http://localhost:3000
