--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@szhsin/react-accordion": "^1.2.6",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
+    "cloudinary": "^2.5.1",
     "formik": "^2.4.6",
     "next": "14.2.13",
     "next-auth": "^4.24.10",
