--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@szhsin/react-accordion": "^1.2.6",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
     "cloudinary": "^2.5.1",
@@ -17,6 +16,7 @@
     "next": "14.2.13",
     "next-auth": "^4.24.10",
     "react": "^18",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "uuid": "^11.0.2",
