--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
     "cloudinary": "^2.5.1",
