--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-auth": "^4.24.10",
     "react": "^18",
     "react-accessible-accordion": "^5.0.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "uuid": "^11.0.2",
